# scottkirk.dev

./: .gitignore  README.md  config.toml
assets/: center-container.css
assets/js/: index.js
assets/sass/: _base.sass
content/en/blog/: _index.md
content/en/blog/about-me/: about-me.md
content/en/blog/gitlab-releases/: gitlab-releases.md
content/en/blog/kafka-memory/: kafka-memory.md
content/en/experience/: _index.md
content/en/home/: about.md  contact.md  index.md
content/en/projects/: _index.md
content/en/projects/automated_semver/: index.md
content/en/projects/autoscale_server/: index.md
content/en/projects/bullet_time/: index.md
content/en/projects/kobuki/: index.md
content/en/projects/raspberry_pi/: index.md
content/en/projects/simla/: index.md
content/en/projects/time_track/: index.md
content/en/projects/to_the_point/: index.md
content/en/projects/wasm_game/: index.md
game/: Cargo.toml
game/src/: lib.rs
i18n/: en.toml
layouts/: index.html
layouts/partials/: nav.html
layouts/partials/footer/: scripts.html
layouts/partials/home/: projects.html
layouts/projects/: list.html  single.html
static/scripts/: game_layout.js
